[gd_scene load_steps=10 format=3 uid="uid://lkiotueqmspr"]

[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/ControlsControl.gd" id="1_y8ojx"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/JumpButton.gd" id="2_5hx1w"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/BrakeButton.gd" id="3_e8c6e"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/SlideButton.gd" id="4_er56s"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/AbilityButton.gd" id="5_ag7xw"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/ResetBindsButton.gd" id="6_c2gxw"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/StartButton.gd" id="7_b1bln"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/How2PlayButton.gd" id="8_eetdm"]
[ext_resource type="Script" path="res://ScriptAssets/ControlsScripts/PlayButton.gd" id="8_fyqw5"]

[node name="ControlsScreenScn" type="CanvasLayer"]
script = ExtResource("1_y8ojx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Title" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="JumpLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Jump Button"

[node name="JumpButtonLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="JumpRebindButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rebind"
script = ExtResource("2_5hx1w")

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="BrakeLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Brake Button"

[node name="BrakeButtonLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="BrakeRebindButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Rebind"
script = ExtResource("3_e8c6e")

[node name="HSeparator2" type="HSeparator" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="SlideLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Slide Button"

[node name="SlideButtonLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="SlideRebindButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Rebind"
script = ExtResource("4_er56s")

[node name="HSeparator3" type="HSeparator" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="AbilityLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Character Ability"

[node name="AbilityButtonLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="AbilityRebindButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Rebind"
script = ExtResource("5_ag7xw")

[node name="HSeparator4" type="HSeparator" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="ResetBindsButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Reset Binds to Default"
script = ExtResource("6_c2gxw")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="StartButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
script = ExtResource("7_b1bln")

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="How2PlayButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "How To Play"
script = ExtResource("8_eetdm")

[node name="HSeparator2" type="HSeparator" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play"
script = ExtResource("8_fyqw5")

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/JumpRebindButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/JumpRebindButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/BrakeRebindButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/BrakeRebindButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3/SlideRebindButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3/SlideRebindButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer4/AbilityRebindButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer4/AbilityRebindButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/ResetBindsButton" to="Control/VBoxContainer/HBoxContainer2/VBoxContainer/ResetBindsButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/StartButton" to="Control/VBoxContainer/VBoxContainer/StartButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/How2PlayButton" to="Control/VBoxContainer/VBoxContainer/How2PlayButton" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/PlayButton" to="Control/VBoxContainer/VBoxContainer/PlayButton" method="_on_pressed"]
